--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	
 	<div>
-		<p>id=text</p>
+		id=text
 	</div>	
 
     <script type="text/javascript" src="./script.js">
